Alpine 3.20 to build the APK, no APK update yet
see #72560

--- a/abuild/abuild.conf
+++ b/abuild/abuild.conf
@@ -25,7 +25,7 @@ REPODEST=$HOME/packages/
 
 # PACKAGER and MAINTAINER are used by newapkbuild when creating new aports for
 # the APKBUILD's "Contributor:" and "Maintainer:" comments, respectively.
-PACKAGER="Leon Steinhäuser <leon.steinhaeuser@fylr.io>"
+PACKAGER="Programmfabrik GmbH <support@programmfabrik.de>"
 MAINTAINER="$PACKAGER"
 
 # what to clean up after a successful build
