--- a/volumes/APKBUILD
+++ b/volumes/APKBUILD
@@ -4,7 +4,7 @@
 # Modified by: Leon Steinhäuser <leon.steinhaeuser@fylr.io>
 pkgname=imagemagick-custom
 _pkgname=ImageMagick
-pkgver=7.1.1.5
+pkgver=7.1.1.33
 pkgrel=0
 _pkgver=${pkgver%.*}-${pkgver##*.}
 _abiver=7
@@ -38,73 +38,6 @@ subpackages="
 	"
 source="$_pkgname-$_pkgver.tar.gz::https://github.com/ImageMagick/ImageMagick/archive/$_pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$_pkgver"
-
-# secfixes:
-#   7.0.11.1-r0:
-#     - CVE-2021-20176
-#   7.0.10.42-r0:
-#     - CVE-2020-29599
-#   7.0.10.35-r0:
-#     - CVE-2020-27560
-#   7.0.10.18-r0:
-#     - CVE-2020-13902
-#   7.0.10.8-r0:
-#     - CVE-2020-19667
-#   7.0.10.0-r0:
-#     - CVE-2020-10251
-#   7.0.9.7-r0:
-#     - CVE-2019-19952
-#   7.0.8.62-r0:
-#     - CVE-2019-17547
-#   7.0.8.56-r0:
-#     - CVE-2019-17541
-#     - CVE-2019-17540
-#     - CVE-2019-14981
-#     - CVE-2019-13454
-#   7.0.8.53-r0:
-#     - CVE-2019-13391
-#     - CVE-2019-13311
-#     - CVE-2019-13310
-#     - CVE-2019-13309
-#     - CVE-2019-13308
-#     - CVE-2019-13307
-#     - CVE-2019-13306
-#     - CVE-2019-13305
-#     - CVE-2019-13304
-#     - CVE-2019-13303
-#     - CVE-2019-13302
-#     - CVE-2019-13301
-#     - CVE-2019-13300
-#     - CVE-2019-13299
-#     - CVE-2019-13298
-#     - CVE-2019-13297
-#     - CVE-2019-13296
-#     - CVE-2019-13295
-#     - CVE-2019-13137
-#     - CVE-2019-13136
-#     - CVE-2019-13135
-#     - CVE-2019-13134
-#     - CVE-2019-13133
-#   7.0.8.44-r0:
-#     - CVE-2019-19949
-#     - CVE-2019-19948
-#     - CVE-2019-16713
-#     - CVE-2019-16712
-#     - CVE-2019-16711
-#     - CVE-2019-15141
-#     - CVE-2019-15140
-#     - CVE-2019-15139
-#     - CVE-2019-14980
-#     - CVE-2019-11598
-#     - CVE-2019-11597
-#     - CVE-2019-11472
-#   7.0.8.38-r0:
-#     - CVE-2019-9956
-#     - CVE-2019-16710
-#     - CVE-2019-16709
-#     - CVE-2019-16708
-#     - CVE-2019-10650
-#     - CVE-2019-10649
 
 build() {
 	case "$CARCH" in
@@ -148,7 +81,7 @@ build() {
 		--with-jxl \
 		--with-wmf \
 		--with-openjpeg \
-		--with-perl-options="PREFIX=/usr INSTALLDIRS=vendor" \
+		--with-perl-options="INSTALL_BASE=/usr INSTALLDIRS=vendor" \
 		$_conf_args
 	make
 }
@@ -195,4 +128,4 @@ _perlmagick_doc() {
 	make -j1 DESTDIR="$subpkgdir" doc_vendor_install
 }
 
-sha512sums="1cd590c7043e0c925a110fd9bd0140cba248909a9555d24727b58d80d479ed1f7a2526e39ed94c9fb22241768f625f55c01692acc324876cb4f3020157ebb624  ImageMagick-7.1.1-5.tar.gz"
+sha512sums="c715777069e27c3680eba11a82536e90899b5fcc80e6be39e0007e28af1b778250b6866e549e4d2ed5e8a401b26ce965ae7c6361c51a791a7e9aa25cd1dac44a  ImageMagick-7.1.1-33.tar.gz"
